--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,10 @@
 		</testResources>
 		<plugins>
 			<plugin>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>maven-jetty-plugin</artifactId>
+			</plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
@@ -137,6 +141,7 @@
 			</plugin>
 		</plugins>
 	</build>
+
 	<properties>
 		<wicket.version>1.3.2</wicket.version>
 		<jetty.version>6.1.4</jetty.version>
